--- a/src/components/layout/single-restaurant.css
+++ b/src/components/layout/single-restaurant.css
@@ -1,3 +1,9 @@
+
+.under-modal {
+    pointer-events: none;
+    opacity: 0.4;
+    background: gray
+}
 .restaurant-name-header {
     width: 100%; 
     text-align: left;
@@ -14,6 +20,7 @@
     max-width: 960px;
     flex-direction: column;
 }
+
 
 .description {
     width: 100%
