--- a/src/components/popUpModal/pop-up-modal.css
+++ b/src/components/popUpModal/pop-up-modal.css
@@ -1,7 +1,7 @@
 .menu-item-modal{
     /* display: none; */
     background: red;
-    width: 500px; 
+    width: 70%; 
     height: 600px;
     position: fixed;
     top: 20%;
