Code clean up, add get started steps into read me.

--- a/src/components/layout/menuItemSelectionForm/menu-item-selection-form.css
+++ b/src/components/layout/menuItemSelectionForm/menu-item-selection-form.css
@@ -1,5 +1,19 @@
 .menu-item-selection-form {
     display: flex; 
     flex-direction: column; 
+    padding: 8px;
     
+}
+
+.menu-item-selection-img {
+    background: gray;
+    height: 200px;
+}
+
+.menu-item-selection-desc{
+    text-align: left;
+}
+
+.quantity{ 
+    height: 40px;
 }
